# ams

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  docker_compose  export-env.bash  gulpfile.mjs  jest.config.js  justfile  manage.py  merge_production_dotenvs_in_dotenv.py  package-lock.json  package.json  pyproject.toml  renew-cert-hook.sh  update-theme.bash  wait-for-db.bash
backend/: Dockerfile  cron-entrypoint.bash  cronjobs  format-python.bash  gunicorn.conf.py  lint-python.bash  manage.py  pyproject.toml  pytest.ini  setup.cfg
backend/ams/: settings.py  urls.py  wsgi.py
backend/ams/base/: models.py
backend/ams/base/migrations/: 0001_initial.py  0002_create_homepage.py  0003_create_membershippage.py  0004_add_membership_option.py  0004_create_emailconfirmationpage.py  0005_homepage_subheading.py  0006_add_generic_page.py  0007_add_main_menu.py  0008_footer.py  0009_remove_footer_site_logo_url_and_more.py  0010_create_django_site.py
backend/ams/base/templates/: base.html  footer.html  (+3 more)
backend/ams/billing/: invoice.py  models.py  service.py  tables.py  urls.py  views.py
backend/ams/dtta/: models.py  settings.py
backend/ams/forum/: urls.py  views.py
backend/ams/test/: test_example.py  utils.py
backend/ams/users/: filters.py  forms.py  models.py  tables.py  urls.py  utils.py  views.py
backend/ams/xero/: models.py  service.py  urls.py  views.py
(+858 files in other folders)
