[tool]

[tool.poetry]
name = "backend"
description = "Backend"
version = "0.1.0"
authors = ["DTTA AMS Developers <dtta-ams-dev@catalyst.net.nz>"]

[[tool.poetry.source]]
name = "package proxy"
url = "https://cat-prod-buildproxy.dmz.wgtn.cat-it.co.nz/root/pypi/+simple/"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
wagtail = "^5.0.2"
django-configurations = "*"
django-relativedelta = "*"
django-registration-redux = "^2.12"
django-tables2 = "^2.6.0"
psycopg2-binary = "*"
gunicorn = "*"
sentry-sdk = "*"
types-python-dateutil = "^2.8.19.13"
wagtailmenus = "^3.1.8"
pydiscourse = "^1.6.1"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
pytest-subtests = "*"
mypy = "*"
black = "*"
flake8-bugbear = "*"
pylint = "*"
ipdb = "*"

[tool.black]
line-length = 120
